@@ -265,3 +265,4 @@
  29-Aug-2020  V1.632 Add fix for missing data collection resolution
  30-Aug-2020  V1.633 Fix issue with subcategory aggregates with unit cardinality
  10-Sep-2020  V1.634 Trap missing data type exception in schema construction
+ 24-Sep-2020  V1.635 Use alternative mapping from pdbx_poly_seq_scheme
